# emojig

./: .gitattributes  .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  DISTRIBUTION.md  INLINE_TUI.md  Makefile  PLAN.md  README.md  RELEASE.md  REUSE.toml  WALKTHROUGH.md  assets.go  build.zig  build.zig.zon  explore_gtk_emoji.py  go.mod  minisign.pub  plain_terminal_support_plan.md
.reuse/: dep5
docs/: Advanced.md  AgenticWorkflows.md  AliasStrategy.md  AppIcons.md  Bash.md  BrowserTuiSandbox.md  BuildSpeed.md  DocumentationConventions.md  EmojiTerminalRendering.md  Go.md  GoReleaser.md  GoScripts.md  GoVsZigReview.md  GuiToTuiAdoption.md  HalfBlockPixelArt.md  HeadlessRecording.md  INLINE_TUI.md  InlineSafeResize.md  InlineTui.md  InstallerScript.md  KeyDispatch.md  Make.md  MojigoInlineHeight.md  PLAN.md  Plan.md  PlatformSupport.md  ProductReview.md  README.md  Release.md  Rust.md  SHELL_INTEGRATION.md  Screenshots.md  SearchEngine.md  ShellIntegration.md  SimpleListMode.md  SkimInlineTui.md  SpecDrivenConfig.md  TerminalIntegration.md  TerminalRestore.md  WALKTHROUGH.md  (+9 more)
issues/: 02-distribution-and-release.md  04-plain-terminal-support.md  05-virtual-console-emoji-support.md  07-xterm-emoji-support.md  08-install-destination-binary.md  09-wasm-build-rootless-mknod.md  10-synonym-search-ranking.md  11-german-search-pferd-fails.md  12-tui-line-cleanup-and-terminal-restoration.md  13-terminal-state-diagnostic-tool.md  14-gui-desktop-scenario-recording.md  15-mojigo-inline-height-mode.md  16-tui-flicker.md  17-custom-commands-and-screens.md  (+19 more)
(+249 files in other folders)
