# SPDX-FileCopyrightText: 2026 Uwe Jugel
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "emojig-inline-demo"
version = "0.1.0"
edition = "2021"
publish = false
description = "Skim-style inline TUI demo: a fixed `--height` viewport rendered the way skim does"

[[bin]]
name = "inline-demo"
path = "src/main.rs"

[dependencies]
# Same rendering stack skim uses, so the inline `--height` viewport behaves
# identically: a Viewport::Fixed(Rect) drawn with absolute cursor coordinates.
ratatui = "0.30.0"
# `use-dev-tty` routes key events and the cursor-position query through
# /dev/tty, so items can still be piped in on stdin (like real skim).
crossterm = { version = "0.29.0", features = ["use-dev-tty", "libc"] }
# Correct display width for emoji/wide glyphs, so the content-sized box width
# is exact (ratatui already pulls this in — no extra download).
unicode-width = "0.2"

[profile.release]
strip = true
